added GH actions yml, should publish to GH actions

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@tfso/redux-switchless-reducer",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "description": "Create redux reducers and actions with less code",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "build": "tsc",
     "test": "jest --watch",
