--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "scripts": {
     "build": "tsc",
     "test": "jest --watch",
-    "citest": "jest --ci",
-    "prepare": "npm run build",
-    "prepublishOnly": "jest --ci"
+    "citest": "jest --ci"
   },
   "repository": {
     "type": "git",
