--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "redux": "^4.0.1"
   },
   "devDependencies": {
+    "conventional-changelog-conventionalcommits": "^4.6.0",
     "@types/jest": "^24.0.13",
-    "jest": "^24.8.0",
-    "ts-jest": "^24.0.2",
+    "jest": "^27.0.6",
+    "ts-jest": "^27.0.3",
     "typescript": "^3.4.5"
   },
   "jest": {
